[package]
authors = ["sitkevij"]
categories = ["command-line-utilities","debugging"]
description = "Futuristic take on hexdump, made in Rust."
include = ["src/**/*","Cargo.toml","Cargo.lock"]
repository = "https://github.com/sitkevij/hex"
keywords = ["hexdump", "hexadecimal", "tools", "ascii", "hex"]
license = "MIT"
name = "hx"
version = "0.2.1"

# see https://doc.rust-lang.org/cargo/reference/manifest.html
[badges]
travis-ci = { repository = "sitkevij/hex", branch = "master" }
codecov = { repository = "sitkevij/hex", branch = "master", service = "github" }

# The development profile, used for `cargo build`.
[profile.dev]
opt-level = 0      # controls the `--opt-level` the compiler builds with.
                   # 0-1 is good for debugging. 2 is well-optimized. Max is 3.
codegen-units = 16  # if > 1 enables parallel code generation which improves
                   # compile times, but prevents some optimizations.
                   # Passes `-C codegen-units`. Ignored when `lto = true`.
panic = 'unwind'   # panic strategy (`-C panic=...`), can also be 'abort'

[profile.release]
opt-level = 3

[dependencies]
clap = "2.31.1"
ansi_term = "0.11"
